feat : Implement ProgressDialog with AsyncTask
- Create AsyncTask subclass
- Show progress dialog
- Dismiss on completion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">AsyncTaskDemo</string>
     <string name="start">Start</string>
+    <string name="title">Downloading</string>
+    <string name="message">Please wait while loading...</string>
+    <string name="cancel">Cancel</string>
+    <string name="success_msg">Download successful...</string>
+    <string name="failure_msg">Download failed</string>
 </resources>
